design fisico updated

--- a/gns-project/project-files/dynamips/8b5b9d7e-4db4-497c-ab61-477036a0ddc4/configs/i11_startup-config.cfg
+++ b/gns-project/project-files/dynamips/8b5b9d7e-4db4-497c-ab61-477036a0ddc4/configs/i11_startup-config.cfg
@@ -4,7 +4,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname RadioAntenna
+hostname Microwave
 !
 ip cef
 no ip domain-lookup
@@ -25,3 +25,6 @@ line aux 0
 !
 !
 end
+d
+nd
+d
