trunks and ipv4s e ipv6s e vlans e loopback e osfp e swl3

--- a/configs/C1.conf
+++ b/configs/C1.conf
@@ -1,16 +1,32 @@
 vlan database
-vlan2
-vlan34
-vlan19
-vlan99
-vlan146
-vlan178
-vlan162
-vlan133
-vlan130
-vlan132
+vlan 2
+vlan 34
+vlan 19
+vlan 99
+vlan 146
+vlan 178
+vlan 162
+vlan 133
+vlan 130
+vlan 132
 exit
+
+
 conf t
+ip routing
+interface loopback 0
+ip address 200.0.0.1 255.255.255.255
+ip ospf 1 area 0
+no shut
+router ospf 1
+network 10.9.0.0 0.0.15.255 area 0
+network 10.9.16.0 0.0.15.255 area 0
+network 200.0.0.0 0.0.0.255 area 0
+
+int range f1/0 - 15
+switchport mode trunk
+switchport trunk encapsulation dot1q
+switchport trunk allowed vlan 1002-1005,1-2,146,178,162,133,130,132
 
 int vlan2
   ip add 10.0.0.1 255.255.254.0
@@ -29,7 +45,7 @@ int vlan99
   ipv add 3100:10:10:0610::1/64
 
 int vlan146
-  ip add 10.9.0.1 255.255.0.0
+  ip add 10.9.0.1 255.255.240.0
   ipv add 3100:10:10:0900::1/64
 
 int vlan178
