--- a/configs/C2.conf
+++ b/configs/C2.conf
@@ -1,17 +1,32 @@
 vlan database
-vlan2
-vlan34
-vlan19
-vlan99
-vlan146
-vlan178
-vlan162
-vlan133
-vlan130
-vlan132
+vlan 2
+vlan 34
+vlan 19
+vlan 99
+vlan 147
+vlan 178
+vlan 162
+vlan 133
+vlan 130
+vlan 132
 exit
-conf t
 
+
+conf t 
+ip routing
+interface loopback 0
+ip address 200.0.0.2 255.255.255.255
+ip ospf 1 area 0
+no shut
+router ospf 1
+network 10.9.0.0 0.0.15.255 area 0
+network 10.9.16.0 0.0.15.255 area 0
+network 200.0.0.0 0.0.0.255 area 0
+ip routing
+int range f1/0 - 15
+switchport mode trunk
+switchport trunk encapsulation dot1q
+switchport trunk allowed vlan 1002-1005,1-2,147,178,162,133,130,132
 int vlan2
   ip add 10.0.0.2 255.255.254.0
   ipv add 3100:10:10:0000::2/64
@@ -28,8 +43,8 @@ int vlan99
   ip add 10.16.0.2 255.255.255.0
   ipv add 3100:10:10:0610::2/64
 
-int vlan146
-  ip add 10.9.0.2 255.255.0.0
+int vlan147
+  ip add 10.9.16.2 255.255.240.0
   ipv add 3100:10:10:0900::2/64
 
 int vlan178
