--- a/configs/ES3.conf
+++ b/configs/ES3.conf
@@ -1,15 +1,31 @@
 vlan database
-vlan19
-vlan99
-vlan146
-vlan178
-vlan162
-vlan133
-vlan130
-vlan132
+vlan 19
+vlan 99
+vlan 146
+vlan 178
+vlan 162
+vlan 133
+vlan 130
+vlan 132
+vlan 147
 exit
-conf t
 
+
+conf t
+ip routing
+interface loopback 0
+ip address 200.0.0.5 255.255.255.255
+ip ospf 1 area 0
+no shut
+router ospf 1
+network 10.9.0.0 0.0.15.255 area 0
+network 10.9.16.0 0.0.15.255 area 0
+network 200.0.0.0 0.0.0.255 area 0
+ip routing
+int range f1/0 - 15
+switchport mode trunk
+switchport trunk encapsulation dot1q
+switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132,19,99 !comercial vlan
 int vlan19
   ip add 10.1.16.5 255.255.240.0
   ipv add 3100:10:10:0110::5/64
@@ -19,7 +35,7 @@ int vlan99
   ipv add 3100:10:10:0610::5/64
 
 int vlan146
-  ip add 10.9.0.5 255.255.0.0
+  ip add 10.9.0.5 255.255.240.0
   ipv add 3100:10:10:0900::5/64
 
 int vlan178
@@ -41,5 +57,9 @@ int vlan130
 int vlan132
   ip add 10.8.32.5 255.255.255.0
   ipv add 3100:10:10:0820::5/64
+
+int vlan147
+  ip add 10.9.16.5 255.255.240.0
+  ipv add 3100:10:10:0900::5/64
 
 end
