--- a/configs/ES4.conf
+++ b/configs/ES4.conf
@@ -1,10 +1,65 @@
 vlan database
 vlan 19
 vlan 99
-vlan 147
+vlan 146
 vlan 178
 vlan 162
 vlan 133
 vlan 130
 vlan 132
+vlan 147
 exit
+
+
+conf t
+ip routing
+interface loopback 0
+ip address 200.0.0.6 255.255.255.255
+ip ospf 1 area 0
+no shut
+router ospf 1
+network 10.9.0.0 0.0.15.255 area 0
+network 10.9.16.0 0.0.15.255 area 0
+network 200.0.0.0 0.0.0.255 area 0
+ip routing
+int range f1/0 - 15
+switchport mode trunk
+switchport trunk encapsulation dot1q
+switchport trunk allowed vlan 1002-1005,1-2,146,147,178,162,133,130,132,19,99 !comercial vlan
+int vlan19
+  ip add 10.1.16.6 255.255.240.0
+  ipv add 3100:10:10:0110::6/64
+
+int vlan99
+  ip add 10.16.0.6 255.255.255.0
+  ipv add 3100:10:10:0610::6/64
+
+int vlan146
+  ip add 10.9.0.6 255.255.240.0
+  ipv add 3100:10:10:0900::6/64
+
+int vlan178
+  ip add 10.11.0.6 255.255.255.0
+  ipv add 3100:10:10:0B00::6/64
+
+int vlan162
+  ip add 10.10.0.6 255.255.255.0
+  ipv add 3100:10:10:0A00::6/64
+
+int vlan133
+  ip add 10.8.48.6 255.255.255.0
+  ipv add 3100:10:10:0830::6/64
+
+int vlan130
+  ip add 10.8.0.6 255.255.255.0
+  ipv add 3100:10:10:0800::6/64
+
+int vlan132
+  ip add 10.8.32.6 255.255.255.0
+  ipv add 3100:10:10:0820::6/64
+
+int vlan147
+  ip add 10.9.16.6 255.255.240.0
+  ipv add 3100:10:10:0900::6/64
+
+end
