--- a/configs/site-aveiro/C1.conf
+++ b/configs/site-aveiro/C1.conf
@@ -68,4 +68,11 @@ int vlan132
   ip add 10.8.32.1 255.255.255.0
   ipv add 3100:10:10:0820::1/64
 
+interface Tunnel 0
+  tunnel source 200.0.0.1
+  tunnel destination 200.0.0.9
+  tunnel mode ipip
+  ip address 200.1.0.254 255.255.255.0
+  no shut
+  ip route 10.32.0.0 255.224.0.0 Tunnel 0 
 end
