--- a/configs/site-aveiro/C2.conf
+++ b/configs/site-aveiro/C2.conf
@@ -1,8 +1,4 @@
 vlan database
-vlan 2
-vlan 34
-vlan 19
-vlan 99
 vlan 147
 vlan 178
 vlan 162
@@ -26,22 +22,7 @@ ip routing
 int range f1/0 - 15
 switchport mode trunk
 switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1-2,147,178,162,133,130,132
-int vlan2
-  ip add 10.0.0.2 255.255.254.0
-  ipv add 3100:10:10:0000::2/64
-
-int vlan34
-  ip add 10.2.0.2 255.255.255.0
-  ipv add 3100:10:10:0200::2/64
-
-int vlan19
-  ip add 10.1.16.2 255.255.240.0
-  ipv add 3100:10:10:0110::2/64
-
-int vlan99
-  ip add 10.16.0.2 255.255.255.0
-  ipv add 3100:10:10:0610::2/64
+switchport trunk allowed vlan 1002-1005,1,147,178,162,133,130,132
 
 int vlan147
   ip add 10.9.16.2 255.255.240.0
@@ -74,4 +55,40 @@ interface Tunnel 0
   ip address 200.1.0.253 255.255.255.0
   no shut
   ip route 10.32.0.0 255.224.0.0 Tunnel 0 
+
+no ip dhcp pool vlan2p0
+no ip dhcp pool vlan34p0
+no ip dhcp pool vlan2p1
+no ip dhcp pool vlan34p1
+
+service dhcp
+
+
+ip dhcp pool vlan2p1
+  network 10.0.0.0 255.255.254.0
+  default-router 10.0.0.3 10.0.0.4
+  dns-server 8.8.8.8
+  ip dhcp excluded-address 10.0.0.0 10.0.1.0
+
+
+ip dhcp pool vlan34p1
+  network 10.2.0.0 255.255.255.0
+  default-router 10.2.0.3 10.2.0.4
+  dns-server 8.8.8.8
+  ip dhcp excluded-address 10.2.0.128 10.2.1.0
+
+
+ip dhcp pool vlan19p1
+  network 10.1.16.0 255.255.240.0
+  default-router 10.1.16.5 10.1.16.6
+  dns-server 8.8.8.8
+  ip dhcp excluded-address 10.1.16.0 10.1.24.0
+
+
+ip dhcp pool vlan99p1
+  network 10.6.16.0 255.255.255.0
+  default-router 10.6.16.5 10.6.16.6
+  dns-server 8.8.8.8
+  ip dhcp excluded-address 10.6.16.0 10.6.16.128
+
 end
