--- a/configs/site-aveiro/ES2.conf
+++ b/configs/site-aveiro/ES2.conf
@@ -18,20 +18,34 @@ ip address 200.0.0.4 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
+network 10.0.0.0 0.0.1.255 area 0
+network 10.2.0.0 0.0.0.255 area 0
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
+
 ip routing
-int range f1/0 - 15
-switchport mode trunk
-switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132,2,34 !video vlan
+service dhcp
+
+int f1/0
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132,2,34 !video vlan
+int range f1/1 - 15
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
+
 int vlan2
   ip add 10.0.0.4 255.255.254.0
+  ip helper-address 10.9.0.1
+  ip helper-address 10.9.16.2
   ipv add 3100:10:10:0000::4/64
 
 int vlan34
   ip add 10.2.0.4 255.255.255.0
+  ip helper-address 10.9.0.1
+  ip helper-address 10.9.16.2
   ipv add 3100:10:10:0200::4/64
 
 int vlan146
