--- a/configs/site-aveiro/ES4.conf
+++ b/configs/site-aveiro/ES4.conf
@@ -12,26 +12,39 @@ exit
 
 
 conf t
-ip routing
+
 interface loopback 0
 ip address 200.0.0.6 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
+network 10.1.16.0 0.0.15.255 area 0
+network 10.6.16.0 0.0.0.255 area 0
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
+
+service dhcp
 ip routing
-int range f1/0 - 15
-switchport mode trunk
-switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1-2,146,147,178,162,133,130,132,19,99 !comercial vlan
+
+int f1/0
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132,19,99 !comercial vlan
+int range f1/1 - 15
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
 int vlan19
   ip add 10.1.16.6 255.255.240.0
+  ip helper-address 10.9.0.1
+  ip helper-address 10.9.16.2
   ipv add 3100:10:10:0110::6/64
 
 int vlan99
-  ip add 10.16.0.6 255.255.255.0
+  ip add 10.6.16.6 255.255.255.0
+  ip helper-address 10.9.0.1
+  ip helper-address 10.9.16.2
   ipv add 3100:10:10:0610::6/64
 
 int vlan146
