--- a/configs/site-aveiro/ES6.conf
+++ b/configs/site-aveiro/ES6.conf
@@ -23,7 +23,7 @@ ip routing
 int range f1/0 - 15
 switchport mode trunk
 switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1-2,146,147,178,162,133,130,132
+switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
 int vlan146
   ip add 10.9.0.8 255.255.240.0
   ipv add 3100:10:10:0900::8/64
