--- a/configs/site-aveiro/MicroAveiro.conf
+++ b/configs/site-aveiro/MicroAveiro.conf
@@ -17,7 +17,7 @@ network 200.0.0.0 0.0.0.255 area 0
 int range f1/0 - 15
 switchport mode trunk
 switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1-2,147,146
+switchport trunk allowed vlan 1002-1005,1,147,146
 
 int vlan147
   ip add 10.9.16.9 255.255.240.0
