--- a/configs/site-aveiro/C2.conf
+++ b/configs/site-aveiro/C2.conf
@@ -1,28 +1,55 @@
 vlan database
 vlan 147
+vlan 146
 vlan 178
 vlan 162
 vlan 133
 vlan 130
 vlan 132
+vlan 999
 exit
 
 
 conf t 
 ip routing
+ipv6 unicast-routing
 interface loopback 0
 ip address 200.0.0.2 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
+network 11.0.0.0 0.0.0.3 area 0
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
 ip routing
-int range f1/0 - 15
+
+
+int vlan 999
+ip addr 11.0.0.2 255.255.255.252
+
+interface Port-Channel 1
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,999
+  switchport access vlan 999
+  no shut
+
+int range f1/11 - 12
+  channel-group 1 mode active
+  no shut
+
+int range f1/0 - 10
 switchport mode trunk
 switchport trunk encapsulation dot1q
 switchport trunk allowed vlan 1002-1005,1,147,178,162,133,130,132
+no shut
+int f1/11
+switchport mode trunk
+switchport trunk encapsulation dot1q
+switchport trunk allowed vlan 1002-1005,1,147,146,178,162,133,130,132
+no shut
+
 
 int vlan147
   ip add 10.9.16.2 255.255.240.0
@@ -56,39 +83,5 @@ interface Tunnel 0
   no shut
   ip route 10.32.0.0 255.224.0.0 Tunnel 0 
 
-no ip dhcp pool vlan2p0
-no ip dhcp pool vlan34p0
-no ip dhcp pool vlan2p1
-no ip dhcp pool vlan34p1
-
-service dhcp
-
-
-ip dhcp pool vlan2p1
-  network 10.0.0.0 255.255.254.0
-  default-router 10.0.0.3 10.0.0.4
-  dns-server 8.8.8.8
-  ip dhcp excluded-address 10.0.0.0 10.0.1.0
-
-
-ip dhcp pool vlan34p1
-  network 10.2.0.0 255.255.255.0
-  default-router 10.2.0.3 10.2.0.4
-  dns-server 8.8.8.8
-  ip dhcp excluded-address 10.2.0.128 10.2.1.0
-
-
-ip dhcp pool vlan19p1
-  network 10.1.16.0 255.255.240.0
-  default-router 10.1.16.5 10.1.16.6
-  dns-server 8.8.8.8
-  ip dhcp excluded-address 10.1.16.0 10.1.24.0
-
-
-ip dhcp pool vlan99p1
-  network 10.6.16.0 255.255.255.0
-  default-router 10.6.16.5 10.6.16.6
-  dns-server 8.8.8.8
-  ip dhcp excluded-address 10.6.16.0 10.6.16.128
 
 end
