--- a/configs/site-aveiro/ES2.conf
+++ b/configs/site-aveiro/ES2.conf
@@ -13,6 +13,7 @@ exit
 
 conf t
 ip routing
+ipv6 unicast-routing
 interface loopback 0
 ip address 200.0.0.4 255.255.255.255
 ip ospf 1 area 0
@@ -38,14 +39,12 @@ int range f1/1 - 15
 
 int vlan2
   ip add 10.0.0.4 255.255.254.0
-  ip helper-address 10.9.0.1
-  ip helper-address 10.9.16.2
+  ip helper-address 10.9.0.15
   ipv add 3100:10:10:0000::4/64
 
 int vlan34
   ip add 10.2.0.4 255.255.255.0
-  ip helper-address 10.9.0.1
-  ip helper-address 10.9.16.2
+  ip helper-address 10.9.0.15
   ipv add 3100:10:10:0200::4/64
 
 int vlan146
