--- a/configs/site-aveiro/ES2.conf
+++ b/configs/site-aveiro/ES2.conf
@@ -41,15 +41,22 @@ int vlan2
   ip add 10.0.0.4 255.255.254.0
   ip helper-address 10.9.0.15
   ipv add 3100:10:10:0000::4/64
+  ipv6 nd managed-config-flag
+  ipv6 dhcp relay destination 3100:10:10:0900::15
+  ipv6 ospf 1 area 0
 
 int vlan34
   ip add 10.2.0.4 255.255.255.0
   ip helper-address 10.9.0.15
   ipv add 3100:10:10:0200::4/64
+  ipv6 nd managed-config-flag
+  ipv6 dhcp relay destination 3100:10:10:0900::15
+  ipv6 ospf 1 area 0
 
 int vlan146
   ip add 10.9.0.4 255.255.240.0
   ipv add 3100:10:10:0900::4/64
+  ipv6 ospf 1 area 0
 
 int vlan178
   ip add 10.11.0.4 255.255.255.0
@@ -74,5 +81,6 @@ int vlan132
 int vlan147
   ip add 10.9.16.4 255.255.240.0
   ipv add 3100:10:10:0900::4/64
+  ipv6 ospf 1 area 0
 
 end
