--- a/configs/site-aveiro/ES6.conf
+++ b/configs/site-aveiro/ES6.conf
@@ -1,10 +1,5 @@
 vlan database
 vlan 146
-vlan 178
-vlan 162
-vlan 133
-vlan 130
-vlan 132
 vlan 147
 exit
 
@@ -12,45 +7,32 @@ exit
 conf t
 ip routing
 ipv6 unicast-routing
-interface loopback 0
-ip address 200.0.0.8 255.255.255.255
-ip ospf 1 area 0
-no shut
-router ospf 1
-network 10.9.0.0 0.0.15.255 area 0
-network 10.9.16.0 0.0.15.255 area 0
-network 200.0.0.0 0.0.0.255 area 0
-ip routing
-int range f1/0 - 15
+
+int range f1/0 - 1
 switchport mode trunk
 switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
+switchport trunk allowed vlan 1002-1005,1,146,147
+
+
+int f1/2
+  no switchport
+  ip add 150.0.0.21 255.255.255.0
+
+int f1/3
+  no switchport
+  ip add 150.0.0.22 255.255.255.0
+
 int vlan146
   ip add 10.9.0.8 255.255.240.0
   ipv add 3100:10:10:0900::8/64
-
-int vlan178
-  ip add 10.11.0.8 255.255.255.0
-  ipv add 3100:10:10:0B00::8/64
-
-int vlan162
-  ip add 10.10.0.8 255.255.255.0
-  ipv add 3100:10:10:0A00::8/64
-
-int vlan133
-  ip add 10.8.48.8 255.255.255.0
-  ipv add 3100:10:10:0830::8/64
-
-int vlan130
-  ip add 10.8.0.8 255.255.255.0
-  ipv add 3100:10:10:0800::8/64
-
-int vlan132
-  ip add 10.8.32.8 255.255.255.0
-  ipv add 3100:10:10:0820::8/64
 
 int vlan147
   ip add 10.9.16.8 255.255.240.0
   ipv add 3100:10:10:0900::8/64
 
+
+ip route 0.0.0.0 0.0.0.0 150.0.0.101
+ip route 0.0.0.0 0.0.0.0 150.0.0.102
+ip route 0.0.0.0 0.0.0.0 150.0.0.201
+ip route 0.0.0.0 0.0.0.0 150.0.0.202
 end
