--- a/configs/site-aveiro/C1.conf
+++ b/configs/site-aveiro/C1.conf
@@ -18,13 +18,20 @@ ip address 200.0.0.1 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
-network 11.0.0.0 0.0.0.3 area 0
+network 10.250.0.0 0.0.0.3 area 0
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
+default-information originate always
+
+ipv6 router ospf 1
+default-information originate always
 
 int vlan 999
-ip addr 11.0.0.1 255.255.255.252
+  ip addr 10.250.0.1 255.255.255.252
+  ipv add 3100:10:10:FFFF::1/64
+  ipv6 ospf 1 area 0
+  no shut
 
 interface Port-Channel 1
   switchport mode trunk
@@ -34,7 +41,7 @@ interface Port-Channel 1
   no shut
 
 int range f1/11 - 12
-  channel-group 1 mode active
+  channel-group 1 mode on
   no shut
 
 int range f1/0 - 9
@@ -54,6 +61,7 @@ no shut
 int vlan146
   ip add 10.9.0.1 255.255.240.0
   ipv add 3100:10:10:0900::1/64
+  ipv6 ospf 1 area 0
 
 int vlan178
   ip add 10.11.0.1 255.255.255.0
@@ -83,5 +91,11 @@ interface Tunnel 0
   no shut
 
 ip route 10.32.0.0 255.224.0.0 Tunnel 0 
+
+ip route 0.0.0.0/0 10.9.0.7
+ip route 0.0.0.0/0 10.9.16.7 
+
+ip route 0.0.0.0/0 10.9.0.8
+ip route 0.0.0.0/0 10.9.16.8 
 
 end
