--- a/configs/site-aveiro/ES3.conf
+++ b/configs/site-aveiro/ES3.conf
@@ -39,15 +39,22 @@ int vlan19
   ip add 10.1.16.5 255.255.240.0
   ip helper-address 10.9.0.15
   ipv add 3100:10:10:0110::5/64
+  ipv6 nd managed-config-flag
+  ipv6 dhcp relay destination 3100:10:10:0900::15
+  ipv6 ospf 1 area 0
 
 int vlan99
   ip add 10.6.16.5 255.255.255.0
   ip helper-address 10.9.0.15
   ipv add 3100:10:10:0610::5/64
+  ipv6 nd managed-config-flag
+  ipv6 dhcp relay destination 3100:10:10:0900::15
+  ipv6 ospf 1 area 0
 
 int vlan146
   ip add 10.9.0.5 255.255.240.0
   ipv add 3100:10:10:0900::5/64
+  ipv6 ospf 1 area 0
 
 int vlan178
   ip add 10.11.0.5 255.255.255.0
@@ -72,5 +79,6 @@ int vlan132
 int vlan147
   ip add 10.9.16.5 255.255.240.0
   ipv add 3100:10:10:0900::5/64
+  ipv6 ospf 1 area 0
 
 end
