--- a/configs/site-aveiro/C1.conf
+++ b/configs/site-aveiro/C1.conf
@@ -18,18 +18,21 @@ ip address 200.0.0.1 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
-network 10.250.0.0 0.0.0.3 area 0
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
+network 10.250.0.0 0.0.0.3 area 0
+network 10.250.1.0 0.0.0.3 area 0
+network 10.245.0.0 0.0.0.3 area 0
 default-information originate always
-
 ipv6 router ospf 1
 default-information originate always
 
+
 int vlan 999
-  ip addr 10.250.0.1 255.255.255.252
-  ipv add 3100:10:10:FFFF::1/64
+  ip addr 10.245.0.1 255.255.255.252
+  no ipv add
+  ipv add 3100:10:10:FFFE::1/64
   ipv6 ospf 1 area 0
   no shut
 
@@ -60,27 +63,33 @@ no shut
 
 int vlan146
   ip add 10.9.0.1 255.255.240.0
+  no ipv add
   ipv add 3100:10:10:0900::1/64
   ipv6 ospf 1 area 0
 
 int vlan178
   ip add 10.11.0.1 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0B00::1/64
 
 int vlan162
   ip add 10.10.0.1 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0A00::1/64
 
 int vlan133
   ip add 10.8.48.1 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0830::1/64
 
 int vlan130
   ip add 10.8.0.1 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0800::1/64
 
 int vlan132
   ip add 10.8.32.1 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0820::1/64
 
 interface Tunnel 0
@@ -90,12 +99,27 @@ interface Tunnel 0
   ip address 200.1.0.254 255.255.255.0
   no shut
 
+int f0/0
+ip add 10.250.0.1 255.255.255.252
+ipv add 3100:10:10:FFFF::0:1/126
+ipv ospf 1 area 0
+no shut
+
+int f0/1
+ip add 10.250.1.1 255.255.255.252
+ipv add 3100:10:10:FFFF::1:1/126
+ipv ospf 1 area 0
+no shut
+
+
 ip route 10.32.0.0 255.224.0.0 Tunnel 0 
 
-ip route 0.0.0.0/0 10.9.0.7
-ip route 0.0.0.0/0 10.9.16.7 
+ip route 0.0.0.0 0.0.0.0 10.9.0.11
+ip route 0.0.0.0 0.0.0.0 10.9.16.11 
 
-ip route 0.0.0.0/0 10.9.0.8
-ip route 0.0.0.0/0 10.9.16.8 
+ip route 0.0.0.0 0.0.0.0 10.9.0.12
+ip route 0.0.0.0 0.0.0.0 10.9.16.12 
 
 end
+
+
