--- a/configs/site-aveiro/ES2.conf
+++ b/configs/site-aveiro/ES2.conf
@@ -40,6 +40,7 @@ int range f1/1 - 15
 int vlan2
   ip add 10.0.0.4 255.255.254.0
   ip helper-address 10.9.0.15
+  no ipv add
   ipv add 3100:10:10:0000::4/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
@@ -48,6 +49,7 @@ int vlan2
 int vlan34
   ip add 10.2.0.4 255.255.255.0
   ip helper-address 10.9.0.15
+  no ipv add
   ipv add 3100:10:10:0200::4/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
@@ -55,32 +57,39 @@ int vlan34
 
 int vlan146
   ip add 10.9.0.4 255.255.240.0
+  no ipv add
   ipv add 3100:10:10:0900::4/64
   ipv6 ospf 1 area 0
 
 int vlan178
   ip add 10.11.0.4 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0B00::4/64
 
 int vlan162
   ip add 10.10.0.4 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0A00::4/64
 
 int vlan133
   ip add 10.8.48.4 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0830::4/64
 
 int vlan130
   ip add 10.8.0.4 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0800::4/64
 
 int vlan132
   ip add 10.8.32.4 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0820::4/64
 
 int vlan147
   ip add 10.9.16.4 255.255.240.0
-  ipv add 3100:10:10:0900::4/64
+  no ipv add
+  ipv add 3100:10:10:0910::4/64
   ipv6 ospf 1 area 0
 
 end
