--- a/configs/site-aveiro/ES4.conf
+++ b/configs/site-aveiro/ES4.conf
@@ -38,6 +38,7 @@ int range f1/1 - 15
 int vlan19
   ip add 10.1.16.6 255.255.240.0
   ip helper-address 10.9.0.15
+  no ipv add
   ipv add 3100:10:10:0110::6/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
@@ -46,6 +47,7 @@ int vlan19
 int vlan99
   ip add 10.6.16.6 255.255.255.0
   ip helper-address 10.9.0.15
+  no ipv add
   ipv add 3100:10:10:0610::6/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
@@ -53,32 +55,39 @@ int vlan99
 
 int vlan146
   ip add 10.9.0.6 255.255.240.0
+  no ipv add
   ipv add 3100:10:10:0900::6/64
   ipv6 ospf 1 area 0
 
 int vlan178
   ip add 10.11.0.6 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0B00::6/64
 
 int vlan162
   ip add 10.10.0.6 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0A00::6/64
 
 int vlan133
   ip add 10.8.48.6 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0830::6/64
 
 int vlan130
   ip add 10.8.0.6 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0800::6/64
 
 int vlan132
   ip add 10.8.32.6 255.255.255.0
+  no ipv add
   ipv add 3100:10:10:0820::6/64
 
 int vlan147
   ip add 10.9.16.6 255.255.240.0
-  ipv add 3100:10:10:0900::6/64
+  no ipv add
+  ipv add 3100:10:10:0910::6/64
   ipv6 ospf 1 area 0
 
 end
