--- a/configs/site-aveiro/MicroAveiro.conf
+++ b/configs/site-aveiro/MicroAveiro.conf
@@ -21,11 +21,13 @@ switchport trunk allowed vlan 1002-1005,1,147,146
 
 int vlan147
   ip add 10.9.16.9 255.255.240.0
-  ipv add 3100:10:10:0900::9/64
+  no ipv add
+  ipv add 3100:10:10:0910::9/64
 
 int vlan146
   ip add 10.9.0.9 255.255.240.0
-  ipv add 3100:10:10:0910::9/64
+  no ipv add
+  ipv add 3100:10:10:0900::9/64
 
 int f0/0
 ip add 192.168.0.1 255.255.255.0
