--- a/configs/site-aveiro/ISP2.conf
+++ b/configs/site-aveiro/ISP2.conf
@@ -1,6 +1,19 @@
 conf t
-int f0/0
-  ip add 150.0.0.201 255.255.255.0
 
-int f1/0
-  ip add 150.0.0.202 255.255.255.0
+int f1/1
+  ip add 50.0.1.2 255.255.255.252
+  ipv add AFFF:10:10:FFFF::1:2/126
+  no shut
+
+
+int f0/1
+  ip add 60.0.0.2 255.255.255.248
+  ipv add AAFF:10:10:FFFF::0:2/125
+  no shut
+
+ip route 200.1.0.96 255.255.255.224 60.0.0.3
+ip route 200.1.0.64 255.255.255.224 60.0.0.4
+ip route 200.1.0.0 255.255.255.192 50.0.0.1
+ip route 200.1.0.0 255.255.255.192 50.0.1.1
+
+end
