--- a/configs/site-aveiro/C2.conf
+++ b/configs/site-aveiro/C2.conf
@@ -24,6 +24,7 @@ network 200.0.0.0 0.0.0.255 area 0
 network 10.250.2.0 0.0.0.3 area 0
 network 10.250.3.0 0.0.0.3 area 0
 network 10.245.0.0 0.0.0.3 area 0
+no shut
 default-information originate always
 ip routing
 
@@ -93,12 +94,12 @@ int vlan132
   ipv add 3100:10:10:0820::2/64
 
 interface Tunnel 0
+  ip unnumbered FastEthernet1/15
   tunnel source 200.0.0.2 
   tunnel destination 200.0.0.9
   tunnel mode ipip
-  ip address 200.1.0.253 255.255.255.0
   no shut
-  ip route 10.32.0.0 255.224.0.0 Tunnel 0 
+  ip route 10.64.0.0 255.224.0.0 Tunnel 0 
 
 
 
@@ -115,11 +116,10 @@ ip ospf 1 area 0
 no shut
 
 
+ip route 10.32.0.0 255.224.0.0 Tunnel 0 
+no ip route 10.64.0.0 255.224.0.0 Tunnel 0 
 
-ip route 0.0.0.0 0.0.0.0 10.9.0.11
-ip route 0.0.0.0 0.0.0.0 10.9.16.11 
-
-ip route 0.0.0.0 0.0.0.0 10.9.0.12
-ip route 0.0.0.0 0.0.0.0 10.9.16.12 
+ip route 0.0.0.0 0.0.0.0 10.250.2.2
+ip route 0.0.0.0 0.0.0.0 10.250.3.2
 
 end
