--- a/configs/site-aveiro/ISP1.conf
+++ b/configs/site-aveiro/ISP1.conf
@@ -1,20 +1,19 @@
-vlan database
-vlan 194
-exit
-
 conf t
-int f0/0
-  switchport mode trunk
-  switchport trunk encapsulation dot1q
-  switchport trunk allowed vlan 1002-1005,1,194
 
-int f1/0.1
-  switchport mode trunk
-  switchport trunk encapsulation dot1q
-  switchport trunk allowed vlan 1002-1005,1,194
+int f1/0
+  ip add 50.0.0.2 255.255.255.252
+  ipv add AFFF:10:10:FFFF::0:2/126
+  no shut
 
-int vlan 194
-  ip add 10.12.0.16 255.255.255.0
-  no ipv add
-  ipv add 3100:10:10:0C00::16/64
+
+int f0/1
+  ip add 60.0.0.1 255.255.255.248
+  ipv add AAFF:10:10:FFFF::0:1/125
+  no shut
+
+ip route 200.1.0.96 255.255.255.224 60.0.0.3
+ip route 200.1.0.64 255.255.255.224 60.0.0.4
+ip route 200.1.0.0 255.255.255.192 50.0.0.1
+ip route 200.1.0.0 255.255.255.192 50.0.1.1
+
 end
