--- a/configs/site-aveiro/C1.conf
+++ b/configs/site-aveiro/C1.conf
@@ -119,5 +119,9 @@ ip route 0.0.0.0 0.0.0.0 10.250.0.2
 ip route 0.0.0.0 0.0.0.0 10.250.1.2
 
 
+ipv route ::/0 3100:10:10:FFFF::0:2
+ipv route ::/0 3100:10:10:FFFF::1:2 
+
+
 
 end
