--- a/configs/site-aveiro/R3.conf
+++ b/configs/site-aveiro/R3.conf
@@ -1,5 +1,6 @@
 conf t
-
+ip routing
+ipv6 unicast-routing
 interface loopback 0
   ip address 200.1.0.97 255.255.255.255
   no shut
@@ -35,17 +36,18 @@ crypto isakmp policy 30
   set transform-set authT cipherT auth_ciphT 
 
 interface Tunnel 1
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.97
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.1
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
   no shut
 ip route 10.0.0.0 255.224.0.0 Tunnel 1
 
+
 interface Tunnel 2
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.97
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.2
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
@@ -53,13 +55,43 @@ interface Tunnel 2
 ip route 10.0.0.0 255.224.0.0 Tunnel 2
 
 interface Tunnel 5
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.97
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.65
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
   no shut
 ip route 10.32.0.0 255.224.0.0 Tunnel 5
+
+
+
+interface Tunnel 11
+  ipv unnumbered f0/1
+  tunnel source loopback0
+  tunnel destination 200.1.0.1
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:0000::/64 Tunnel 11
+
+interface Tunnel 12
+  ipv unnumbered f0/1
+  tunnel source loopback0
+  tunnel destination 200.1.0.2
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:0000::/64 Tunnel 12
+
+interface Tunnel 15
+  ipv unnumbered f0/1
+  tunnel source loopback0
+  tunnel destination 200.1.0.65
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:2000::/64 Tunnel 15
+
+ipv route 3100:10:10:4000::/64 f0/1
+
+
 
 ip route 0.0.0.0 0.0.0.0 50.0.2.1
 
