--- a/configs/site-aveiro/C2.conf
+++ b/configs/site-aveiro/C2.conf
@@ -122,4 +122,7 @@ no ip route 10.64.0.0 255.224.0.0 Tunnel 0
 ip route 0.0.0.0 0.0.0.0 10.250.2.2
 ip route 0.0.0.0 0.0.0.0 10.250.3.2
 
+ipv route ::/0 3100:10:10:FFFF::2:2
+ipv route ::/0 3100:10:10:FFFF::3:2
+
 end
