--- a/configs/site-aveiro/R1.conf
+++ b/configs/site-aveiro/R1.conf
@@ -63,19 +63,37 @@ crypto isakmp policy 30
   set transform-set authT cipherT auth_ciphT
 
 interface Tunnel 1
-  ip unnumbered FastEthernet1/0
-  tunnel source 200.1.0.1
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.97
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
+  no shut
 ip route 10.64.0.0 255.224.0.0 Tunnel 1
 
 interface Tunnel 3
-  ip unnumbered FastEthernet1/0
-  tunnel source 200.1.0.1
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.65
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
+  no shut
 ip route 10.32.0.0 255.224.0.0 Tunnel 3 
+
+interface Tunnel 11
+  ipv unnumbered f0/0
+  tunnel source loopback0
+  tunnel destination 200.1.0.97
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:4000::/64 Tunnel 11
+
+interface Tunnel 13
+  ipv unnumbered f0/0
+  tunnel source loopback0
+  tunnel destination 200.1.0.65
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:2000::/64 Tunnel 13 
 
 end
