--- a/configs/site-aveiro/R2.conf
+++ b/configs/site-aveiro/R2.conf
@@ -67,8 +67,8 @@ crypto isakmp policy 30
   set transform-set authT cipherT auth_ciphT 
 
 interface Tunnel 2
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.2
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.97
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
@@ -76,12 +76,28 @@ interface Tunnel 2
 ip route 10.64.0.0 255.224.0.0 Tunnel 2
 
 interface Tunnel 4
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.2
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.65
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
   no shut
 ip route 10.32.0.0 255.224.0.0 Tunnel 4
+
+interface Tunnel 12
+  ipv unnumbered f0/0
+  tunnel source loopback0
+  tunnel destination 200.1.0.97
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:4000::/64 Tunnel 12
+
+interface Tunnel 14
+  ipv unnumbered f0/0
+  tunnel source loopback0
+  tunnel destination 200.1.0.65
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:2000::/64 Tunnel 14
 
 end
