--- a/configs/site-aveiro/R4.conf
+++ b/configs/site-aveiro/R4.conf
@@ -1,4 +1,6 @@
 conf t
+ip routing
+ipv6 unicast-routing
 
 interface loopback 0
   ip address 200.1.0.65 255.255.255.255
@@ -32,8 +34,8 @@ crypto isakmp policy 30
   set transform-set authT cipherT auth_ciphT 
 
 interface Tunnel 3
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.65
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.1
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
@@ -41,8 +43,8 @@ interface Tunnel 3
 ip route 10.0.0.0 255.224.0.0 Tunnel 3
 
 interface Tunnel 4
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.65
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.2
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
@@ -50,13 +52,38 @@ interface Tunnel 4
 ip route 10.0.0.0 255.224.0.0 Tunnel 4
 
 interface Tunnel 5
-  ip unnumbered FastEthernet1/1
-  tunnel source 200.1.0.65
+  ip unnumbered loopback0
+  tunnel source loopback0
   tunnel destination 200.1.0.97
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
   no shut
 ip route 10.64.0.0 255.224.0.0 Tunnel 5
+
+interface Tunnel 13
+  ipv unnumbered f0/1
+  tunnel source loopback0
+  tunnel destination 200.1.0.1
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:0000::/64 Tunnel 13
+
+interface Tunnel 14
+  ipv unnumbered f0/1
+  tunnel source loopback0
+  tunnel destination 200.1.0.2
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:0000::/64 Tunnel 14
+
+interface Tunnel 15
+  ipv unnumbered f0/1
+  tunnel source loopback0
+  tunnel destination 200.1.0.97
+  tunnel mode ipv6ip
+  no shut
+ipv route 3100:10:10:4000::/64 Tunnel 15
+
 
 ip route 0.0.0.0 0.0.0.0 50.0.3.1
 
