--- a/configs/site-aveiro/ES3.conf
+++ b/configs/site-aveiro/ES3.conf
@@ -24,6 +24,13 @@ network 10.6.16.0 0.0.0.255 area 0
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
+passive-interface vlan 19
+passive-interface vlan 99
+passive-interface vlan 178
+passive-interface vlan 162
+passive-interface vlan 133
+passive-interface vlan 130
+passive-interface vlan 132
 no shut
 
 service dhcp
