--- a/configs/site-aveiro/C1.conf
+++ b/configs/site-aveiro/C1.conf
@@ -24,6 +24,12 @@ network 200.0.0.0 0.0.0.255 area 0
 network 10.250.0.0 0.0.0.3 area 0
 network 10.250.1.0 0.0.0.3 area 0
 network 10.245.0.0 0.0.0.3 area 0
+passive-interface vlan 178
+passive-interface vlan 162
+passive-interface vlan 133
+passive-interface vlan 130
+passive-interface vlan 132
+passive-interface vlan 999
 no shut
 default-information originate always
 ipv6 router ospf 1
