--- a/configs/C1.conf
+++ b/configs/C1.conf
@@ -1,6 +1,6 @@
 vlan database
-vlan 147
 vlan 146
+vlan 147
 vlan 178
 vlan 162
 vlan 133
@@ -10,19 +10,19 @@ vlan 999
 exit
 
 
-conf t 
+conf t
 ip routing
 ipv6 unicast-routing
 interface loopback 0
-ip address 200.0.0.2 255.255.255.255
+ip address 200.0.0.1 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
-network 10.250.2.0 0.0.0.3 area 0
-network 10.250.3.0 0.0.0.3 area 0
+network 10.250.0.0 0.0.0.3 area 0
+network 10.250.1.0 0.0.0.3 area 0
 network 10.245.0.0 0.0.0.3 area 0
 passive-interface vlan 178
 passive-interface vlan 162
@@ -32,16 +32,14 @@ passive-interface vlan 132
 passive-interface vlan 999
 no shut
 default-information originate always
-ip routing
-
 ipv6 router ospf 1
 default-information originate always
 
 
 int vlan 999
-  ip addr 10.245.0.2 255.255.255.252
+  ip addr 10.245.0.1 255.255.255.252
   no ipv add
-  ipv add 3100:10:10:FFFE::2/64
+  ipv add 3100:10:10:FFFE::1/64
   ipv6 ospf 1 area 0
   no shut
 
@@ -56,79 +54,82 @@ int range f1/11 - 12
   channel-group 1 mode on
   no shut
 
-int range f1/0 - 10
+int range f1/0 - 9
 switchport mode trunk
 switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1,147,178,162,133,130,132
-no shut
-int f1/11
+switchport trunk allowed vlan 1002-1005,1,146,178,162,133,130,132
+int f1/15
 switchport mode trunk
 switchport trunk encapsulation dot1q
-switchport trunk allowed vlan 1002-1005,1,147,146,178,162,133,130,132
-no shut
+switchport trunk allowed vlan 1002-1005,1,146,178,162,133,130,132
 
+int f1/10
+switchport mode access
+switchport access vlan 146
+no shut 
 
-int vlan147
-  ip add 10.9.16.2 255.255.240.0
+int vlan146
+  ip add 10.9.0.1 255.255.240.0
   no ipv add
-  ipv add 3100:10:10:0910::2/64
+  ipv add 3100:10:10:0900::1/64
   ipv6 ospf 1 area 0
 
 int vlan178
-  ip add 10.11.0.2 255.255.255.0
+  ip add 10.11.0.1 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0B00::2/64
+  ipv add 3100:10:10:0B00::1/64
 
 int vlan162
-  ip add 10.10.0.2 255.255.255.0
+  ip add 10.10.0.1 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0A00::2/64
+  ipv add 3100:10:10:0A00::1/64
 
 int vlan133
-  ip add 10.8.48.2 255.255.255.0
+  ip add 10.8.48.1 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0830::2/64
+  ipv add 3100:10:10:0830::1/64
 
 int vlan130
-  ip add 10.8.0.2 255.255.255.0
+  ip add 10.8.0.1 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0800::2/64
+  ipv add 3100:10:10:0800::1/64
 
 int vlan132
-  ip add 10.8.32.2 255.255.255.0
+  ip add 10.8.32.1 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0820::2/64
+  ipv add 3100:10:10:0820::1/64
 
 interface Tunnel 0
   ip unnumbered FastEthernet1/15
-  tunnel source 200.0.0.2 
   tunnel destination 200.0.0.9
   tunnel mode ipip
   no shut
-  ip route 10.64.0.0 255.224.0.0 Tunnel 0 
-
-
 
 int f0/0
-ip add 10.250.2.1 255.255.255.252
-ipv add 3100:10:10:FFFF::2:1/126
-ip ospf 1 area 0
+ip add 10.250.0.1 255.255.255.252
+ipv add 3100:10:10:FFFF::0:1/126
+ipv ospf 1 area 0
 no shut
 
 int f0/1
-ip add 10.250.3.1 255.255.255.252
-ipv add 3100:10:10:FFFF::3:1/126
-ip ospf 1 area 0
+ip add 10.250.1.1 255.255.255.252
+ipv add 3100:10:10:FFFF::1:1/126
+ipv ospf 1 area 0
 no shut
 
 
 ip route 10.32.0.0 255.224.0.0 Tunnel 0 
 no ip route 10.64.0.0 255.224.0.0 Tunnel 0 
 
-ip route 0.0.0.0 0.0.0.0 10.250.2.2
-ip route 0.0.0.0 0.0.0.0 10.250.3.2
+ip route 0.0.0.0 0.0.0.0 10.250.0.2
+ip route 0.0.0.0 0.0.0.0 10.250.1.2
 
-ipv route ::/0 3100:10:10:FFFF::2:2
-ipv route ::/0 3100:10:10:FFFF::3:2
+
+ipv route ::/0 3100:10:10:FFFF::0:2
+ipv route ::/0 3100:10:10:FFFF::1:2 
+
+snmp-server user uDDR gDDR v3 auth md5 authpass priv des56 testpass
+snmp-server group gDDR v3 priv
+snmp-server community private C1
 
 end
