--- a/configs/ES2.conf
+++ b/configs/ES2.conf
@@ -15,7 +15,7 @@ conf t
 ip routing
 ipv6 unicast-routing
 interface loopback 0
-ip address 200.0.0.3 255.255.255.255
+ip address 200.0.0.4 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
@@ -45,59 +45,63 @@ int range f1/1 - 15
   switchport trunk encapsulation dot1q
   switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
 
+
 int vlan2
-  ip add 10.0.0.3 255.255.254.0
+  ip add 10.0.0.4 255.255.254.0
   ip helper-address 10.9.0.15
   no ipv add
-  ipv add 3100:10:10:0000::3/64
+  ipv add 3100:10:10:0000::4/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
   ipv6 ospf 1 area 0
 
 int vlan34
-  ip add 10.2.0.3 255.255.255.0
+  ip add 10.2.0.4 255.255.255.0
   ip helper-address 10.9.0.15
   no ipv add
-  ipv add 3100:10:10:0200::3/64
+  ipv add 3100:10:10:0200::4/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
   ipv6 ospf 1 area 0
-  
+
 int vlan146
-  ip add 10.9.0.3 255.255.240.0
+  ip add 10.9.0.4 255.255.240.0
   no ipv add
-  ipv add 3100:10:10:0900::3/64
+  ipv add 3100:10:10:0900::4/64
   ipv6 ospf 1 area 0
-  
+
 int vlan178
-  ip add 10.11.0.3 255.255.255.0
+  ip add 10.11.0.4 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0B00::3/64
+  ipv add 3100:10:10:0B00::4/64
 
 int vlan162
-  ip add 10.10.0.3 255.255.255.0
+  ip add 10.10.0.4 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0A00::3/64
+  ipv add 3100:10:10:0A00::4/64
 
 int vlan133
-  ip add 10.8.48.3 255.255.255.0
+  ip add 10.8.48.4 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0830::3/64
+  ipv add 3100:10:10:0830::4/64
 
 int vlan130
-  ip add 10.8.0.3 255.255.255.0
+  ip add 10.8.0.4 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0800::3/64
+  ipv add 3100:10:10:0800::4/64
 
 int vlan132
-  ip add 10.8.32.3 255.255.255.0
+  ip add 10.8.32.4 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0820::3/64
+  ipv add 3100:10:10:0820::4/64
 
 int vlan147
-  ip add 10.9.16.3 255.255.240.0
+  ip add 10.9.16.4 255.255.240.0
   no ipv add
-  ipv add 3100:10:10:0910::3/64
+  ipv add 3100:10:10:0910::4/64
   ipv6 ospf 1 area 0
 
+snmp-server user uDDR gDDR v3 auth md5 authpass priv des56 testpass
+snmp-server group gDDR v3 priv
+snmp-server community private C1
 end
