--- a/configs/ES4.conf
+++ b/configs/ES4.conf
@@ -1,6 +1,6 @@
 vlan database
-vlan 2
-vlan 34
+vlan 19
+vlan 99
 vlan 146
 vlan 178
 vlan 162
@@ -15,17 +15,17 @@ conf t
 ip routing
 ipv6 unicast-routing
 interface loopback 0
-ip address 200.0.0.4 255.255.255.255
+ip address 200.0.0.6 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
-network 10.0.0.0 0.0.1.255 area 0
-network 10.2.0.0 0.0.0.255 area 0
+network 10.1.16.0 0.0.15.255 area 0
+network 10.6.16.0 0.0.0.255 area 0
 network 10.9.0.0 0.0.15.255 area 0
 network 10.9.16.0 0.0.15.255 area 0
 network 200.0.0.0 0.0.0.255 area 0
-passive-interface vlan 2
-passive-interface vlan 34
+passive-interface vlan 19
+passive-interface vlan 99
 passive-interface vlan 178
 passive-interface vlan 162
 passive-interface vlan 133
@@ -33,71 +33,73 @@ passive-interface vlan 130
 passive-interface vlan 132
 no shut
 
-ip routing
 service dhcp
 
 int f1/0
   switchport mode trunk
   switchport trunk encapsulation dot1q
-  switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132,2,34 !video vlan
+  switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132,19,99 !comercial vlan
 int range f1/1 - 15
   switchport mode trunk
   switchport trunk encapsulation dot1q
   switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
-
-int vlan2
-  ip add 10.0.0.4 255.255.254.0
+int vlan19
+  ip add 10.1.16.6 255.255.240.0
   ip helper-address 10.9.0.15
   no ipv add
-  ipv add 3100:10:10:0000::4/64
+  ipv add 3100:10:10:0110::6/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
   ipv6 ospf 1 area 0
-
-int vlan34
-  ip add 10.2.0.4 255.255.255.0
+  
+int vlan99
+  ip add 10.6.16.6 255.255.255.0
   ip helper-address 10.9.0.15
   no ipv add
-  ipv add 3100:10:10:0200::4/64
+  ipv add 3100:10:10:0610::6/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
   ipv6 ospf 1 area 0
 
 int vlan146
-  ip add 10.9.0.4 255.255.240.0
+  ip add 10.9.0.6 255.255.240.0
   no ipv add
-  ipv add 3100:10:10:0900::4/64
+  ipv add 3100:10:10:0900::6/64
   ipv6 ospf 1 area 0
 
 int vlan178
-  ip add 10.11.0.4 255.255.255.0
+  ip add 10.11.0.6 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0B00::4/64
+  ipv add 3100:10:10:0B00::6/64
 
 int vlan162
-  ip add 10.10.0.4 255.255.255.0
+  ip add 10.10.0.6 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0A00::4/64
+  ipv add 3100:10:10:0A00::6/64
 
 int vlan133
-  ip add 10.8.48.4 255.255.255.0
+  ip add 10.8.48.6 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0830::4/64
+  ipv add 3100:10:10:0830::6/64
 
 int vlan130
-  ip add 10.8.0.4 255.255.255.0
+  ip add 10.8.0.6 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0800::4/64
+  ipv add 3100:10:10:0800::6/64
 
 int vlan132
-  ip add 10.8.32.4 255.255.255.0
+  ip add 10.8.32.6 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0820::4/64
+  ipv add 3100:10:10:0820::6/64
 
 int vlan147
-  ip add 10.9.16.4 255.255.240.0
+  ip add 10.9.16.6 255.255.240.0
   no ipv add
-  ipv add 3100:10:10:0910::4/64
+  ipv add 3100:10:10:0910::6/64
   ipv6 ospf 1 area 0
 
+snmp-server user uDDR gDDR v3 auth md5 authpass priv des56 testpass
+snmp-server group gDDR v3 priv
+snmp-server community private C1
 end
+
