--- a/configs/old-building.conf
+++ b/configs/old-building.conf
@@ -1,41 +1,114 @@
 ; SW A
+vlan database
+vlan 1 
+vlan 146 
+vlan 147 
+exit
+
 interface f0/0
   ip address 192.168.10.10 255.255.255.0
   ip ospf 20 area 0
+  no shut
 
 interface f0/1
   ip address 192.168.200.10 255.255.255.0
   ip ospf 20 area 0
+  no shut
 
 interface vlan 1
-  ip address 192.168.100.10 255.255.252.0
+  ip address 10.9.0.0 255.255.252.0
   ip ospf 20 area 0
+  no shut
+
+
+interface vlan 146
+  ip address 10.9.0.17 255.255.240.0
+  ip ospf 1 area 0
+  no shut
+
+interface vlan 147
+  ip address 10.9.16.17 255.255.240.0
+  ip ospf 1 area 0
+  no shut
+
+interface range f1/0 - 1
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,146,147
+  no shut
 
 interface fastEthernet 1/14
   switchport mode trunk
   switchport trunk encapsulation dot1q
+  no shut
 
 interface fastEthernet 1/15
   switchport mode trunk
   switchport trunk encapsulation dot1q 
+  no shut
+ip routing
+router ospf 20
+network 10.9.0.18 255.255.240.0 area 0
+no network 10.9.0.0 0.0.3.255 area 0
+router ospf 1
+network 10.9.0.0 0.0.15.255 area 0
+network 10.9.16.0 0.0.15.255 area 0
+redistribute ospf 20 subnets
 
 ; SW B
+vlan database
+vlan 1 
+vlan 146 
+vlan 147 
+exit
+
 interface f0/0
   ip address 192.168.11.11 255.255.255.0
   ip ospf 20 area 0
+  no shut
 
 interface f0/1
   ip address 192.168.200.11 255.255.255.0
   ip ospf 20 area 0
+  no shut
 
 interface vlan 1
   ip address 192.168.100.11 255.255.252.0
   ip ospf 20 area 0
+  no shut
 
 interface fastEthernet 1/14
   switchport mode trunk
   switchport trunk encapsulation dot1q
+  no shut
 
 interface fastEthernet 1/15
   switchport mode trunk
   switchport trunk encapsulation dot1q 
+  no shut
+
+
+interface vlan 146
+  ip address 10.9.0.18 255.255.240.0
+  ip ospf 1 area 0
+  no shut
+
+interface vlan 147
+  ip address 10.9.16.18 255.255.240.0
+  ip ospf 1 area 0
+  no shut
+
+interface range f1/0 - 1
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,146,147
+  no shut
+
+ip routing
+router ospf 20
+network 10.9.0.18 255.255.240.0 area 0
+no network 10.9.0.0 0.0.3.255 area 0
+router ospf 1
+network 10.9.0.0 0.0.15.255 area 0
+network 10.9.16.0 0.0.15.255 area 0
+redistribute ospf 20 subnets
