--- a/configs/ES3.conf
+++ b/configs/ES3.conf
@@ -15,7 +15,7 @@ conf t
 ip routing
 ipv6 unicast-routing
 interface loopback 0
-ip address 200.0.0.6 255.255.255.255
+ip address 200.0.0.5 255.255.255.255
 ip ospf 1 area 0
 no shut
 router ospf 1
@@ -44,59 +44,61 @@ int range f1/1 - 15
   switchport trunk encapsulation dot1q
   switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
 int vlan19
-  ip add 10.1.16.6 255.255.240.0
+  ip add 10.1.16.5 255.255.240.0
   ip helper-address 10.9.0.15
   no ipv add
-  ipv add 3100:10:10:0110::6/64
+  ipv add 3100:10:10:0110::5/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
   ipv6 ospf 1 area 0
-  
+
 int vlan99
-  ip add 10.6.16.6 255.255.255.0
+  ip add 10.6.16.5 255.255.255.0
   ip helper-address 10.9.0.15
   no ipv add
-  ipv add 3100:10:10:0610::6/64
+  ipv add 3100:10:10:0610::5/64
   ipv6 nd managed-config-flag
   ipv6 dhcp relay destination 3100:10:10:0900::15
   ipv6 ospf 1 area 0
 
 int vlan146
-  ip add 10.9.0.6 255.255.240.0
+  ip add 10.9.0.5 255.255.240.0
   no ipv add
-  ipv add 3100:10:10:0900::6/64
+  ipv add 3100:10:10:0900::5/64
   ipv6 ospf 1 area 0
 
 int vlan178
-  ip add 10.11.0.6 255.255.255.0
+  ip add 10.11.0.5 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0B00::6/64
+  ipv add 3100:10:10:0B00::5/64
 
 int vlan162
-  ip add 10.10.0.6 255.255.255.0
+  ip add 10.10.0.5 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0A00::6/64
+  ipv add 3100:10:10:0A00::5/64
 
 int vlan133
-  ip add 10.8.48.6 255.255.255.0
+  ip add 10.8.48.5 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0830::6/64
+  ipv add 3100:10:10:0830::5/64
 
 int vlan130
-  ip add 10.8.0.6 255.255.255.0
+  ip add 10.8.0.5 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0800::6/64
+  ipv add 3100:10:10:0800::5/64
 
 int vlan132
-  ip add 10.8.32.6 255.255.255.0
+  ip add 10.8.32.5 255.255.255.0
   no ipv add
-  ipv add 3100:10:10:0820::6/64
+  ipv add 3100:10:10:0820::5/64
 
 int vlan147
-  ip add 10.9.16.6 255.255.240.0
+  ip add 10.9.16.5 255.255.240.0
   no ipv add
-  ipv add 3100:10:10:0910::6/64
+  ipv add 3100:10:10:0910::5/64
   ipv6 ospf 1 area 0
 
+snmp-server user uDDR gDDR v3 auth md5 authpass priv des56 testpass
+snmp-server group gDDR v3 priv
+snmp-server community private C1
 end
-
