--- a/configs/R1.conf
+++ b/configs/R1.conf
@@ -2,7 +2,6 @@ conf t
 ip routing
 ipv6 unicast-routing
 
-
 router ospf 1
 network 200.1.0.0 0.0.0.3 area 0
 network 10.250.0.0 0.0.0.3 area 0
@@ -10,49 +9,46 @@ network 10.250.2.0 0.0.0.3 area 0
 no shut
 
 interface loopback 0
-  ip address 200.1.0.2 255.255.255.255
+  ip address 200.1.0.1 255.255.255.255
   no shut
 
 int f0/0
-  ip add 10.250.1.2 255.255.255.252
+  ip add 10.250.0.2 255.255.255.252
   ip ospf 1 area 0
-  ipv add 3100:10:10:FFFF::1:2/126  
+  ipv add 3100:10:10:FFFF::0:2/126
   ipv ospf 1 area 0
   ip nat inside
   no shut
 
 int f0/1
-  ip add 10.250.3.2 255.255.255.252
+  ip add 10.250.2.2 255.255.255.252
   ip ospf 1 area 0
-  ipv add 3100:10:10:FFFF::3:2/126
+  ipv add 3100:10:10:FFFF::2:2/126
   ipv ospf 1 area 0
   ip nat inside
   no shut
 
 
-int f1/1
-  ip add 50.0.1.1 255.255.255.252
-  ipv add AFFF:10:10:FFFF::1:1/126
+int f1/0
+  ip add 50.0.0.1 255.255.255.252
+  ipv add AFFF:10:10:FFFF::0:1/126
   ip nat outside
   no shut
 
 
-
 int f2/0
-  ip add 10.245.0.2 255.255.255.252
+  ip add 10.245.0.1 255.255.255.252
   no shut
 
 access-list 1 permit 10.0.0.0 0.31.255.255
 ip nat pool MyPool 200.1.0.32 200.1.0.63 netmask 255.255.255.224
-
-ip nat Stateful id 2
-  backup 10.245.0.2
-  peer 10.245.0.1
+ip nat Stateful id 1
+  primary 10.245.0.1
+  peer 10.245.0.2
   mapping-id 10 
   ip nat inside source list 1 pool MyPool mapping-id 10 overload
 
-ip route 0.0.0.0 0.0.0.0 50.0.1.2
-
+ip route 0.0.0.0 0.0.0.0 50.0.0.2
 
 crypto isakmp policy 30
   authentication pre-share 
@@ -60,44 +56,47 @@ crypto isakmp policy 30
   crypto isakmp key labcom address 200.1.0.2 
   crypto isakmp key labcom address 200.1.0.65 
   crypto isakmp key labcom address 200.1.0.97
-  crypto ipsec transform-set authT ah-sha-hmac 
-  crypto ipsec transform-set cipherT esp-des 
-  crypto ipsec transform-set auth_ciphT ah-sha-hmac esp-des 
-  crypto ipsec profile ARipsec 
-  set transform-set authT cipherT auth_ciphT 
+  crypto ipsec transform-set authT ah-sha-hmac
+  crypto ipsec transform-set cipherT esp-des
+  crypto ipsec transform-set auth_ciphT ah-sha-hmac esp-des
+  crypto ipsec profile ARipsec
+  set transform-set authT cipherT auth_ciphT
 
-interface Tunnel 2
+interface Tunnel 1
   ip unnumbered loopback0
   tunnel source loopback0
   tunnel destination 200.1.0.97
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
   no shut
-ip route 10.64.0.0 255.224.0.0 Tunnel 2
+ip route 10.64.0.0 255.224.0.0 Tunnel 1
 
-interface Tunnel 4
+interface Tunnel 3
   ip unnumbered loopback0
   tunnel source loopback0
   tunnel destination 200.1.0.65
   tunnel mode ipsec ipv4
   tunnel protection ipsec profile ARipsec
   no shut
-ip route 10.32.0.0 255.224.0.0 Tunnel 4
+ip route 10.32.0.0 255.224.0.0 Tunnel 3 
 
-interface Tunnel 12
+interface Tunnel 11
   ipv unnumbered f0/0
   tunnel source loopback0
   tunnel destination 200.1.0.97
   tunnel mode ipv6ip
   no shut
-ipv route 3100:10:10:4000::/64 Tunnel 12
+ipv route 3100:10:10:4000::/64 Tunnel 11
 
-interface Tunnel 14
+interface Tunnel 13
   ipv unnumbered f0/0
   tunnel source loopback0
   tunnel destination 200.1.0.65
   tunnel mode ipv6ip
   no shut
-ipv route 3100:10:10:2000::/64 Tunnel 14
+ipv route 3100:10:10:2000::/64 Tunnel 13 
 
+snmp-server user uDDR gDDR v3 auth md5 authpass priv des56 testpass
+snmp-server group gDDR v3 priv
+snmp-server community private C1
 end
