--- a/configs/ES1.conf
+++ b/configs/ES1.conf
@@ -36,11 +36,22 @@ no shut
 ip routing
 service dhcp
 
+
+interface Port-Channel 1
+  switchport mode trunk
+  switchport trunk encapsulation dot1q
+  switchport trunk allowed vlan 1002-1005,1,146,178,162,133,130,132
+  no shut
+
+int range f1/11 - 12
+  channel-group 1 mode on
+  no shut
+
 int f1/0
   switchport mode trunk
   switchport trunk encapsulation dot1q
   switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132,2,34 !video vlan
-int range f1/1 - 12
+int range f1/1 - 10
   switchport mode trunk
   switchport trunk encapsulation dot1q
   switchport trunk allowed vlan 1002-1005,1,146,147,178,162,133,130,132
